--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,17 @@ body {
     background-color: white;
     width: 288px;
     height: 503px;
-    margin-top: 150px;
-    margin-left: 576px;
     border-radius: 27px;
+    margin: auto;
+    margin-top: 150px;
+    text-align: center;
+    box-shadow: 5px 20px 50px 0px rgba(0, 0, 0, 0.6);
+    padding: 35px 50px;
+    position: relative;
 }
 
 img {
-    width: 7%;
+    width: 10%;
     padding-top: 20px;
 }
 
@@ -33,10 +37,6 @@ button {
 .features {
     display: flex;
     padding-bottom: 15px;
-}
-
-hr {
-    width: 66%;
 }
 
 h1 {
