--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,19 @@ img {
     padding-top: 20px;
 }
 
+#free {
+    color: rgba(41, 41, 41, 1);
+    font-size: 36px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+}
+
 #forever {
     font-family: "Allan", serif;
+    color: rgba(45, 68, 128, 1);
+    font-size: 36px;
+    font-weight: 400;
 }
 
 button {
@@ -41,4 +52,6 @@ button {
 
 h1 {
     text-align: center;
+    text-transform: uppercase;
+    font-weight: 300;
 }
