--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,8 @@ body {
 }
 
 img {
-    width: 10%;
-    padding-top: 20px;
+    width: 20px;
+    padding-top: 15px;
 }
 
 #free {
@@ -42,16 +42,24 @@ img {
 }
 
 button {
-    margin-left: 576px;
+    margin-left: 900px;
+    background-color: rgba(255, 188, 15, 1);
+    color: rgba(45, 68, 128, 1);
+    border-radius: 27px;
+    text-transform: uppercase;
 }
 
 .features {
     display: flex;
     padding-bottom: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 h1 {
     text-align: center;
     text-transform: uppercase;
     font-weight: 300;
+    padding-bottom: 20px;
 }
