--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ body {
     width: 288px;
     height: 503px;
     border-radius: 27px;
-    margin: auto;
     margin-top: 150px;
     text-align: center;
     box-shadow: 5px 20px 50px 0px rgba(0, 0, 0, 0.6);
@@ -23,7 +22,7 @@ body {
 
 img {
     width: 20px;
-    padding-top: 15px;
+    margin: 0;
 }
 
 #free {
@@ -32,6 +31,8 @@ img {
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 4px;
+    line-height: 36px;
+    padding-top: 5px;
 }
 
 #forever {
@@ -39,22 +40,33 @@ img {
     color: rgba(45, 68, 128, 1);
     font-size: 36px;
     font-weight: 400;
+    width: 150px;
+    padding-top: 5px;
+    transform: translate(30%);
 }
 
 button {
-    margin-left: 900px;
+    position: absolute;
+    bottom: -5%;
+    left: 25%;
     background-color: rgba(255, 188, 15, 1);
     color: rgba(45, 68, 128, 1);
     border-radius: 27px;
+    border: none;
+    font-weight: 600;
+    padding: 20px 30px;
+    letter-spacing: 7%;
     text-transform: uppercase;
 }
 
 .features {
     display: flex;
-    padding-bottom: 15px;
+    flex-direction: row;
+    align-items: center;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 1px;
+    padding-bottom: 5px;
 }
 
 h1 {
@@ -62,4 +74,16 @@ h1 {
     text-transform: uppercase;
     font-weight: 300;
     padding-bottom: 20px;
+}
+
+hr {
+    font-weight: bold;
+}
+
+#featfive {
+    padding-bottom: 25px;
+}
+
+.sen {
+    margin-left: 25px;
 }
