--- a/styles.css
+++ b/styles.css
@@ -48,14 +48,14 @@ img {
 button {
     position: absolute;
     bottom: -5%;
-    left: 25%;
+    left: 19%;
     background-color: rgba(255, 188, 15, 1);
     color: rgba(45, 68, 128, 1);
     border-radius: 27px;
     border: none;
     font-weight: 600;
-    padding: 20px 30px;
-    letter-spacing: 7%;
+    padding: 23px 40px;
+    letter-spacing: 1px;
     text-transform: uppercase;
 }
 
